// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runChallenge should runs custom test case only when its given 1`] = `
"[2m[22m Running with custom test case #1 [started]
[2m[22m Running with custom test case #1 [failed]
[2m[22m → Output was not matched with custom test case #1


Input
===============
[36mTest[39m

Output (expected)
===============
[32mOutput[39m

Output
===============
[31mTest[39m"
`;

exports[`runChallenge should runs given challenge properly 1`] = `
"[2m[22m Running with test case #1 [started]
[2m[22m Running with test case #1 [failed]
[2m[22m → Output was not matched with test case #1


Input
===============
[36mTest[39m

Output (expected)
===============
[32mOutput[39m

Output
===============
[31mTest[39m"
`;

exports[`runChallenge should shows debug message whenever test case leave debugging log 1`] = `
"[2m[22m Running with test case #1 [started]
[2m[22m Running with test case #1 [failed]
[2m[22m → Output was not matched with test case #1


Input
===============
[36mTest[39m

Output (expected)
===============
[32mOutput[39m

Output
===============
[31m[3m(empty)[23m[39m

Debug
===============
[35mTest Log[39m"
`;

exports[`runChallenge should shows error message whenever test case throws an error 1`] = `
"[2m[22m Running with test case #1 [started]
[2m[22m Running with test case #1 [failed]
[2m[22m → Test case failed with an error


Input
===============
[36mTest[39m

Output (expected)
===============
[32mOutput[39m

Output
===============
[31mError: Test Error.[39m"
`;
